--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
   </head>
-  <body>
+  <body style="margin: 0">
     <div id="app">
-      <h2>Clojure-Turtle example. Control me with your Figwheel REPL.</h2>
     </div>
     <script src="js/main.js" type="text/javascript"></script>
   </body>
